# olric-bookstore

./: .env.example  .gitignore  books_data.json  manage.py  pyproject.toml  requirements.txt
apps/accounts/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_user_bio_user_birth_date_user_preferences_and_more.py
apps/books/: admin.py  managers.py  models.py  urls.py  views.py
apps/books/admin/: __init__.py  author.py  book.py  category.py  publisher.py
apps/books/migrations/: 0001_initial.py
apps/books/models/: __init__.py  author.py  book.py  category.py  publisher.py
apps/books/views/: __init__.py  detail.py  home.py  listing.py
apps/cart/: admin.py  cart.py  context_processors.py  models.py  urls.py  views.py
apps/cart/cart/: __init__.py  coupon.py  manager.py  service.py
apps/cart/migrations/: 0001_initial.py
apps/cart/models/: __init__.py  cart.py  item.py
apps/cart/views/: __init__.py  actions.py  base.py
apps/coupons/: admin.py  forms.py  models.py  views.py
apps/dashboard/: urls.py  views.py
apps/dashboard/views/: __init__.py  (+5 more)
apps/orders/: admin.py  apps.py  forms.py  models.py  services.py  signals.py  sms.py  urls.py  views.py
apps/payments/: admin.py  models.py  services.py  urls.py  views.py
apps/reviews/: admin.py  forms.py  models.py  urls.py  views.py
apps/wishlist/: context_processors.py  models.py  urls.py  views.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py
docs/: QUICKSTART.md  api-endpoints.md  architect.md  database-schema.md  deployment-guide.md  readme.md  rules.md  security-checklist.md  tasks.md  tech-stack.md  testing-guide.md
static/css/: index.css
templates/: base.html  home.html
templates/accounts/: login.html  profile_edit.html  register.html
templates/books/: book_detail.html  book_list.html  category_list.html
templates/cart/: cart_detail.html
templates/dashboard/: index.html
templates/orders/: order_create.html  order_detail.html  order_list.html  order_success.html  order_track.html
templates/payments/: failed.html  mock_gateway.html  success.html
templates/wishlist/: wishlist_list.html
(+31 files in other folders)
